--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,7 +1,11 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 .pagewrapper {
 	display: grid;
 	grid-template-columns: repeat(12, 1fr);
-	grid-template-rows: 50px auto 50px;
+	grid-template-rows: 50px 1fr 1fr 50px;
 	height: 100vh;
 	height: 100dvh;
 }
@@ -14,19 +18,26 @@
 
 .main {
 	grid-column: 1 / 13;
-	grid-row: 2;
-	display: flex;
-	justify-content: center;
+	grid-row: 2 / 4;
+	display: grid;
+	grid-template-columns: 25% 50% 25%;
+	grid-template-rows: repeat(4, 1fr);
 }
 
 .footer {
 	grid-column: 1 / 13;
-	grid-row: 3;
+	grid-row: 4;
 	background-color: purple;
 	text-align: center;
 }
 
+.card-container {
+	grid-column: 1 / 13;
+	grid-row: 2 / 4;
+}
+
 .infoform {
-	width: 50%;
 	background-color: gray;
+	grid-column: 2 / 3;
+	grid-row: 1;
 }
